# hot_desk

./: README.MD  config.py  main.py  pyproject.toml
app/: __init__.py  views.py
