[tool.poetry]
name = "hot-desk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Beerware"
readme = "README.md"
packages = [{include = "hot_desk"}]

[tool.poetry.dependencies]
python = "3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
